@@ -1,3 +1,7 @@
+2006-12-21  Ulrich Drepper  <drepper@redhat.com>
+
+	* include/atomic.h (atomic_forced_read): New macro.
+
 2006-12-19  Jakub Jelinek  <jakub@redhat.com>
 
 	* nss/getXXbyYY_r.c: Include atomic.h.
